reintroduce LfBus.getHighestPriorityTargetV / remove LfBus.getHighestTargetVPriorityMainVoltageControl
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>